--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 </head>
 
 <body>
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <!-- <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
         <h5 class="my-0 mr-md-auto font-weight-normal">Krinjal</h5>
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-dark" href="/about/">About</a>
             <a class="p-2 text-dark" href="/team/">Team</a>
         </nav>
-    </div>
+    </div> -->
 
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4">Krinjal</h1>
@@ -66,25 +66,73 @@
             </div>
             <div class="card mb-4 shadow-sm">
                 <div class="card-header">
-                    <h5 class="my-0 font-weight-normal">Krinjal Shikshya-Dikshya</h5>
+                    <h5 class="my-0 font-weight-normal">Shikshya-Dikshya</h5>
                 </div>
                 <div class="card-body">
                     <p>a 5 min youtube show that provides scholarship to needy students every week </p>
-                    <a href="/projects/shikshya-dikshya" class="btn btn-lg btn-block btn-outline-primary"
+                    <a href="https://kshitijlohani.com/shikshya-dikshya/"
+                        class="btn btn-lg btn-block btn-outline-primary" role="button">Learn
+                        more</a>
+                </div>
+            </div>
+            <div class="card mb-4 shadow-sm">
+                <div class="card-header">
+                    <h5 class="my-0 font-weight-normal">Pahilo Kadam</h5>
+                </div>
+                <div class="card-body">
+                    <p>help people going through mental struggles by connecting them with counsellors </p>
+                    <a href="https://pahilokadam.com/" class="btn btn-lg btn-block btn-outline-primary"
+                        role="button">Learn
+                        more</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card-deck mb-3 text-center">
+            <div class="card mb-4 shadow-sm">
+                <div class="card-header">
+                    <h5 class="my-0 font-weight-normal">Krinjal mentorship</h5>
+                </div>
+                <div class="card-body">
+                    <p>Nepalese from Google, Apple, Harvard, Stanford mentoring new generation of Nepalese </p>
+                    <a href="https://requestmentor.com/" class="btn btn-lg btn-block btn-outline-primary"
                         role="button">Learn
                         more</a>
                 </div>
             </div>
             <div class="card mb-4 shadow-sm">
                 <div class="card-header">
-                    <h5 class="my-0 font-weight-normal">Krinjal Pahilo Kadam</h5>
+                    <h5 class="my-0 font-weight-normal">Covid-19 Nepalese student loan assistance</h5>
                 </div>
                 <div class="card-body">
-                    <p>help people going through mental struggles by connecting them with counsellors </p>
-                    <a href="/projects/pahilokadam" class="btn btn-lg btn-block btn-outline-primary" role="button">Learn
+                    <p>assisting Nepalese students to pay their rents during covid-19 </p>
+                    <a href="https://docs.google.com/spreadsheets/d/1QON2UE_8lE49l_xr3_MhrbnZLwPTlehD7RbHXazgN2U"
+                        class="btn btn-lg btn-block btn-outline-primary" role="button">Learn
                         more</a>
                 </div>
             </div>
+            <div class="card mb-4 shadow-sm">
+                <div class="card-header">
+                    <h5 class="my-0 font-weight-normal">Coming Soon...</h5>
+                </div>
+                <div class="card-body">
+                    <p>always working on something new. However, i reveal what i do only after completing it </p>
+                    <!-- <a href="https://pahilokadam.com/" class="btn btn-lg btn-block btn-outline-primary"
+                        role="button">Learn
+                        more</a> -->
+                </div>
+            </div>
+        </div>
+
+        <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+            <h4 class="display-4">About me</h4>
+            <p class="lead">I am Kshitij Raj Lohani : <a href="https://kshitijlohani.com">kshitijlohani.com</a> | <a
+                    href="https://facebook.com/kshitij.lohani">facebook</a></p>
+        </div>
+
+        <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+            <h4 class="display-4">Team</h4>
+            <p class="lead">For now it's only me. If you want to join, let me know</p>
         </div>
 
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
