--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
 
         <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
             <h4 class="display-4">About me</h4>
-            <p class="lead">I am Kshitij Raj Lohani : <a href="https://kshitijlohani.com">kshitijlohani.com</a> | <a
+            <p class="lead">I am Kshitij Raj Lohani | <a href="https://kshitijlohani.com">kshitijlohani.com</a> , <a
                     href="https://facebook.com/kshitij.lohani">facebook</a></p>
         </div>
 
         <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
             <h4 class="display-4">Team</h4>
-            <p class="lead">For now it's only me. If you want to join, let me know</p>
+            <p class="lead">Know us or join us | <a href="https://krinjal.org/team">our team</a></p>
         </div>
 
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
