--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4">Krinjal</h1>
         <p class="lead">Nothing special, just meaningful work in a simple way</p>
+        <p><a href="https://www.facebook.com/Krinjal-101879558124993">Facebook</a></p>
     </div>
 
     <div class="container">
